# expent

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  TESTABLE_FEATURES.md  bacon.toml  biome.jsonc  database_schema.md  docker-compose.yml  expent.db  fix_conflict.js  fix_conflict2.js  flake.nix  ocr-plan.md  ocr.md  package.json  patch_process.patch  plan-1.md  plan-v01.md  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  process_entities.py  pyproject.toml  ruff.toml  rustfmt.toml  skills-lock.json  smart-budgeting-system.md  test-propmt.md  test_contacts.js  turbo.json
.cargo/: config.toml
.husky/: pre-commit
.jules/: BOLT.md  BOLT_JOURNAL.md  CORE.md  PALETTE.md  PALETTE_JOURNAL.md  SENTINEL.md  SENTINEL_JOURNAL.md
apps/auth/: Cargo.toml
apps/auth/src/: main.rs
apps/server/: .env.example  Cargo.toml  Dockerfile  package.json
apps/server/src/: auth.rs  extractors.rs  main.rs  ocr.rs
apps/server/src/auth/adapter/: account.rs  mod.rs  others.rs  session.rs  user.rs  verification.rs
apps/server/src/middleware/: error.rs
apps/server/src/routes/: categories.rs  contacts.rs  groups.rs  mod.rs  ocr.rs  p2p.rs  reconciliation.rs  subscriptions.rs  transactions.rs  uploads.rs  users.rs  wallets.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/adapter/: account.rs  mod.rs  others.rs  session.rs  user.rs  verification.rs
crates/budgets/: Cargo.toml
crates/budgets/src/: lib.rs  tests.rs
crates/contacts/: Cargo.toml
crates/contacts/examples/: bench_normalization.rs
crates/contacts/src/: lib.rs
crates/contacts/src/ops/: create.rs  delete.rs  get.rs  identifiers.rs  list.rs  merge.rs  mod.rs  resolve.rs  suggestions.rs  update.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs
crates/db/src/entities/: account.rs  accounts.rs  bank_statement_row.rs  bank_statement_rows.rs  budgets.rs  categories.rs  contact.rs  contact_identifier.rs  contact_identifiers.rs  contact_link.rs  contact_links.rs  contact_staging.rs  contacts.rs  enums.rs  group.rs  groups.rs  ledger_tabs.rs  lib.rs  mod.rs  ocr_job_edits.rs  ocr_jobs.rs  p2p_request.rs  p2p_requests.rs  p2p_transfers.rs  prelude.rs  purchase.rs  purchase_import.rs  purchase_imports.rs  purchase_item.rs  purchase_items.rs  purchases.rs  session.rs  sessions.rs  statement_txn_match.rs  statement_txn_matches.rs  sub_alert.rs  sub_alerts.rs  subscription.rs  subscription_charge.rs  subscription_charges.rs  (+18 more)
crates/db/src/services/: categories.rs  contacts.rs  groups.rs  ocr.rs  p2p.rs  reconciliation.rs  subscriptions.rs  transactions.rs  users.rs  wallets.rs
crates/expent_core/: Cargo.toml
crates/expent_core/src/: bridge.rs  lib.rs
crates/expent_core/src/services/: mod.rs
crates/expent_core/src/services/categories/: create.rs  delete.rs  list.rs  mod.rs  system.rs
crates/expent_core/src/services/contacts/: create.rs  delete.rs  get.rs  identifiers.rs  list.rs  merge.rs  mod.rs  resolve.rs  suggestions.rs  update.rs
crates/expent_core/src/services/groups/: create.rs  list.rs  members.rs  transactions.rs
crates/expent_core/src/services/ocr/: jobs.rs  mod.rs  process.rs  process.rs.bak  worker.rs
crates/expent_core/src/services/ocr_bridge/: mod.rs
crates/expent_core/src/services/p2p/: ledger.rs  repayment.rs  requests.rs
crates/expent_core/src/services/reconciliation/: matching.rs  mod.rs  statement.rs  tests.rs
crates/expent_core/src/services/subscriptions/: alerts.rs  detection.rs  manage.rs  mod.rs
crates/expent_core/src/services/transactions/: create.rs  delete.rs  list.rs  mod.rs  split.rs  summary.rs  update.rs  utils.rs
crates/expent_core/src/services/users/: mod.rs  profile.rs  upi.rs
crates/expent_core/src/services/wallets/: create.rs  delete.rs  list.rs  mod.rs  update.rs  utils.rs
crates/expent_core/src/tests/: mod.rs
crates/expent_core/tests/: core_init_tests.rs  dashboard_tests.rs  data_integrity_tests.rs  ledger_parity_tests.rs  subscription_tests.rs  summary_tests.rs  transaction_list_tests.rs  transaction_tests.rs
crates/expent_core/tests/common/: mod.rs
crates/expent_core/tests/helpers/: db.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260331_092335_create_groups_table.rs  m20260331_181001_add_missing_user_fields.rs  m20260331_185523_add_associated_contact_id.rs  m20260401_000001_add_indexes.rs  m20260403_000001_financial_refactor.rs  m20260404_000001_create_categories_table.rs  m20260404_000002_add_notes_to_transactions.rs  m20260404_000003_add_description_to_ledger_tabs.rs  m20260404_000004_fix_reconciliation_schema.rs  m20260404_000005_add_category_to_transactions.rs  m20260408_000001_create_ocr_jobs.rs  m20260417_000001_enhance_ocr_jobs.rs  m20260417_000002_add_ocr_retries.rs  m20260417_000003_add_ocr_scheduled_at.rs  m20260417_000004_add_ocr_raw_key.rs  m20260417_000005_add_ocr_schema_version.rs  m20260417_000006_add_contact_staging.rs  m20260417_000007_create_ocr_job_edits.rs  m20260417_000008_add_ocr_trace_id.rs  m20260422_000001_create_budgets_table.rs  m20260423_000001_add_cached_names_to_contacts.rs  m20260511_114743_update_wallet_type_enum_values.rs  m20260512_000001_add_bank_details_to_wallets.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: jobs.rs  lib.rs  schema.rs  worker.rs
crates/ocr/src/ops/: process.rs
crates/subscriptions/: Cargo.toml
crates/subscriptions/src/: lib.rs  ops.rs
crates/transactions/: Cargo.toml
crates/transactions/src/: lib.rs  ops.rs  summary.rs  tests.rs
crates/upload/: Cargo.toml
crates/upload/src/: lib.rs  optimizer.rs
crates/users/: Cargo.toml
crates/users/src/: lib.rs
crates/users/src/ops/: profile.rs  upi.rs
crates/wallets/: Cargo.toml
crates/wallets/src/: lib.rs  ops.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: aggregations.rs  budget.rs  financial.rs  lib.rs  matching.rs  parsing.rs  text.rs
docs/: api.md  apps_ocr_architecture.md  apps_server_architecture.md  apps_web_booking_and_play_plan.md  auth.md  core.md  crates_auth_architecture.md  dashboard.md  (+14 more)
(+439 files in other folders)
