[workspace]
members = [
  "apps/server",
  "crates/auth",
  "crates/db",
  "crates/migration",
  "crates/ocr",
  "crates/upload",
]
resolver = "2"

[workspace.lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "deny", priority = -2 }
rust_2018_idioms    = { level = "warn", priority = -3 }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
perf     = { level = "deny", priority = -3 }
style    = { level = "warn", priority = -4 }
