[project]
dependencies = [
  "fastapi",
  "uvicorn",
  "easyocr",
  "pdfplumber",
  "boto3",
  "requests",
  "python-multipart",
  "python-dotenv",
  "google-generativeai",
  "pymupdf",
]
description = "Add your description here"
name = "expent"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
