[project]
dependencies = [
  "fastapi",
  "uvicorn",
  "easyocr",
  "pdfplumber",
  "requests",
  "python-multipart",
  "python-dotenv",
  "pymupdf",
  "google-genai",
]
description = "Add your description here"
name = "expent"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [ "pytest>=9.0.2" ]
