[package]
name    = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait        = "0.1"
axum               = "0.8"
better-auth        = "0.9.0"
bson               = { features = [ "chrono-0_4" ], version = "2.13" }
chrono             = { features = [ "serde" ], version = "0.4" }
db                 = { path = "../../crates/db", version = "0.1.0" }
dotenvy            = "0.15"
mongodb            = "3.5.2"
rand               = "0.8"
reqwest            = { features = [ "json", "multipart" ], version = "0.12" }
resend-rs          = "0.21.1"
serde              = { features = [ "derive" ], version = "1" }
serde_json         = "1"
tokio              = { features = [ "full" ], version = "1" }
tower-http         = { features = [ "cors" ], version = "0.6" }
tracing            = "0.1"
tracing-subscriber = { features = [ "env-filter" ], version = "0.3" }
urlencoding        = "2.1"
uuid               = { features = [ "v4", "serde" ], version = "1.18" }

[dev-dependencies]
http-body-util = "0.1"
rstest         = "0.26.1"
tower          = { features = [ "util" ], version = "0.5" }
tracing-test   = "0.2"
