[package]
name    = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait        = "0.1"
axum               = "0.8"
chrono             = { features = [ "serde" ], version = "0.4" }
db                 = { path = "../../crates/db", version = "0.1.0" }
dotenvy            = "0.15"
rand               = "0.8"
reqwest            = { features = [ "json", "multipart" ], version = "0.12" }
resend-rs          = "0.21.1"
serde              = { features = [ "derive" ], version = "1" }
serde_json         = "1"
sqlx               = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio              = { features = [ "full" ], version = "1" }
tower-http         = { features = ["cors", "fs", "trace"], version = "0.6" }
tracing            = "0.1"
tracing-subscriber = { features = [ "env-filter" ], version = "0.3" }
urlencoding        = "2.1"
uuid               = { features = [ "v4", "serde" ], version = "1.18" }
sea-orm            = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
aws-config         = "1.5"
aws-sdk-s3         = "1.73"
http               = "1.2"

[dev-dependencies]
http-body-util = "0.1"
rstest         = "0.26.1"
tower          = { features = [ "util" ], version = "0.5" }
tracing-test   = "0.2"
