[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
better-auth = { version = "0.9.0", features = ["axum", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
db = { path = "../db", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
tracing = "0.1"
