[package]
name    = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum        = { features = [ "multipart" ], version = "0.8" }
better-auth = { features = [ "axum", "derive" ], version = "0.9.0" }
chrono      = { features = [ "serde" ], version = "0.4" }
db          = { path = "../db", version = "0.1.0" }
sea-orm     = { features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ], version = "1.1.19" }
serde       = { features = [ "derive" ], version = "1" }
serde_json  = "1"
sqlx        = { features = [ "runtime-tokio-native-tls", "sqlite", "chrono" ], version = "0.8" }
tracing     = "0.1"
uuid        = { features = [ "v4", "serde" ], version = "1.18" }
