[package]
name              = "budgets"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace       = true
chrono.workspace       = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
strum_macros.workspace = true
thiserror.workspace    = true
ts-rs.workspace        = true
tracing.workspace      = true
uuid.workspace         = true

[dev-dependencies]
rstest = "0.26.1"
tokio  = { features = ["full"], version = "1.44" }
migration    = { path = "../migration" }

[lints]
workspace = true
