[package]
name = "contacts"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true

any_ascii.workspace    = true
rphonetic.workspace    = true
strsim                 = "0.11.1"

anyhow.workspace       = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true
