[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "serde-json-impl"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
rust_decimal = "1.41.0"
uuid = { version = "1.18", features = ["v7"] }
strum = "0.26"
strum_macros = "0.26"
