[package]
name    = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono       = { features = [ "serde" ], version = "0.4.44" }
rust_decimal = { version = "1.41.0", features = ["serde-with-str"] }
sea-orm      = { features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ], version = "1.1.19" }
serde        = { features = [ "derive" ], version = "1.0.228" }
serde_json   = "1.0.149"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

ts-rs        = { features = [ "chrono-impl", "serde-json-impl" ], version = "12.0.1" }
uuid         = { features = [ "v7" ], version = "1.18" }

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
