[package]
name              = "expent_core"
version.workspace = true
edition.workspace = true

[dependencies]
auth.workspace   = true
db.workspace     = true
ocr.workspace    = true
upload.workspace = true

anyhow.workspace       = true
aws-config.workspace   = true
aws-sdk-s3.workspace   = true
better-auth.workspace  = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true

[lints]
workspace = true
