[package]
name              = "expent_core"
version.workspace = true
edition.workspace = true

[dependencies]
auth.workspace   = true
db.workspace     = true
ocr.workspace    = true
upload.workspace = true

anyhow.workspace       = true
aws-config.workspace   = true
aws-sdk-s3.workspace   = true
better-auth.workspace  = true
rphonetic.workspace    = true
chrono.workspace       = true
rust_decimal.workspace = true
rand.workspace         = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true
uuid.workspace         = true
sea-orm.workspace = true
strsim = "0.11.1"
any_ascii.workspace = true


[dev-dependencies]
mockall = "0.12.1"
rstest = "0.26.1"
tracing-test = "0.2.5"
env_logger = "0.11.3"

[lints]
workspace = true
