[package]
name    = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { features = [ "attributes", "tokio1" ], version = "1" }

[dependencies.sea-orm-migration]
features = [ "runtime-tokio-native-tls", "sqlx-sqlite" ]
version  = "1.1.0"
