[package]
name              = "ocr"
version.workspace = true
edition.workspace = true

[dependencies]
db.workspace     = true
upload.workspace = true

anyhow.workspace     = true
chrono.workspace     = true
rand.workspace       = true
reqwest.workspace    = true
sea-orm.workspace    = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true
uuid.workspace       = true
