[package]
name              = "transactions"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace      = true
wallets.workspace = true

anyhow.workspace       = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true

[dev-dependencies]
migration = { path = "../migration" }
rstest    = "0.26.1"
tokio     = { features = [ "full" ], version = "1.44" }

[lints]
workspace = true
