[package]
name = "upload"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
image = "0.25"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
infer = "0.16"
aws-config = "1.5"
aws-sdk-s3 = "1.73"
aws-smithy-runtime-api = "1.7"
chrono = "0.4"
