[package]
name              = "upload"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace     = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace     = true
serde.workspace      = true
thiserror.workspace  = true
tokio.workspace      = true
tracing.workspace    = true
uuid.workspace       = true

aws-smithy-runtime-api = "1.7"
bytes                  = "1.0"
image                  = "0.25"
image_hasher           = "3.1"
infer                  = "0.16"
mime_guess             = "2.0"
serde_bytes            = "0.11"
