[package]
name              = "users"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace     = true
chrono.workspace     = true
regex.workspace      = true
sea-orm.workspace    = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
uuid.workspace       = true

[lints]
workspace = true
