[package]
name              = "users"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace     = true
chrono.workspace     = true
regex.workspace      = true
sea-orm.workspace    = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
uuid.workspace       = true
once_cell = "1.21.4"
lazy_static = "1.5.0"

[lints]
workspace = true

[dev-dependencies]
rstest = "0.26.1"
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["full"] }
