[package]
name              = "wallets"
edition.workspace = true
version.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace       = true
chrono.workspace       = true
rust_decimal.workspace = true
sea-orm.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
